--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+		<meta name="color-scheme" content="light only">
 		<style>
 			body {margin: 0}
 			div {height: calc(100%/6)}
