--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 		<meta name="color-scheme" content="light only">
+		<title>Rainbow Flag</title>
 		<style>
 			body {margin: 0}
 			div {height: calc(100%/6)}
